# luminous

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
benches/: image_loader_bench.rs  pipeline_bench.rs
crates/image_loader/: Cargo.toml
crates/image_loader/benches/: image_loader.rs
crates/image_loader/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: ipc_daemon.rs  lib.rs  shared_lib.rs
examples/: luminous.toml
plugins/: special.py
plugins/CLIP/: main.py  plugin.json  pyproject.toml
plugins/HDF5/: Cargo.toml  plugin.json
plugins/HDF5/src/: lib.rs
plugins/SAM2/: main.py  plugin.json  pyproject.toml
plugins/SAM3/: hf_login.py  main.py  plugin.json  pyproject.toml
plugins/heic/: Cargo.toml  plugin.json
plugins/heic/src/: lib.rs
plugins/raw/: plugin.json
plugins/raw/src/: lib.rs
plugins/raw_plugin/: Cargo.toml
plugins/red/: CMakeLists.txt  README.md  README.txt  ffi_image.h  plugin.json  red_image_plugin.cpp  test_plugin.cpp
plugins/segment-anything/: main.py  plugin.json  pyproject.toml
plugins/special/: plugin.json  special.py
plugins/wds/: Cargo.toml  plugin.json
plugins/wds/src/: lib.rs
src/: app_state_cache.rs  config.rs  fs_scan.rs  image_loader.rs  image_processing.rs  image_ring_cache.rs  lib.rs  main.rs  pipeline.rs  plugins.rs
src/pipeline/: gpu_proc.rs  mod.rs
src/pipeline/shaders/: blur.wgsl  brighten.wgsl  extract_channel.wgsl  flip.wgsl  resize.wgsl  rotate.wgsl
src/plugins/: ipc_daemon.rs  manifest.rs  mod.rs  shared_lib.rs
src/ui/: bindings.rs  full_view_presenter.rs  grid_view_presenter.rs  mod.rs  pipeline_presenter.rs  settings_presenter.rs
ui/: app-window.slint  common.slint  edits-panel.slint  exif.slint  full-view.slint  grid-view.slint  main.slint  pipeline-panel.slint  plugins.slint  select-rect.slint  settings.slint  side-panel.slint  theme.slint
ui/icons/: README.md
