[package]
name = "luminous"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }
csscolorparser = "0.8.2"
directories = "6.0.0"
env_logger = "0.11.8"
hex = "0.4.3"
image = { version = "0.25.9", default-features = false, features = [
  "jpeg",
  "png",
  "bmp",
  "gif",
  "webp",
] }
log = "0.4.29"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
shared_memory = "0.12.4"
threadpool = "1.8.1"
toml = "0.9.11"
uuid = { version = "1.20.0", features = ["v4"] }
walkdir = "2.5.0"

[dependencies.slint]
version = "1.15.0"
default-features = false
features = ["std", "compat-1-2", "log", "renderer-skia-opengl"]

[target.'cfg(target_os = "linux")'.dependencies]
slint = { version = "1.15.0", default-features = false, features = [
  "backend-winit",
] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
slint = { version = "1.15.0", default-features = false, features = [
  "backend-default",
] }

[build-dependencies]
slint-build = "1.15.0"

[profile.dev]
opt-level = 3
split-debuginfo = "unpacked"
codegen-units = 256

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
codegen-units = 1

[profile.quick-release]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 128
strip = false
