[package]
name = "luminous"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/plugins", "crates/image_loader"]

[workspace.dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
dashmap = "6.1.0"
directories = "6.0.0"
hex = "0.4.3"
log = "0.4.29"
image = { version = "0.25.9", default-features = false }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
slint = { version = "1.16.0", default-features = false }
tempfile = "3.26.0"

[features]
default = ["gif", "jpeg", "png", "tiff", "webp"]
# avif = ["image/avif"]
avif-native = ["image/avif-native"]
bmp = ["image/bmp"]
dds = ["image/dds"]
exr = ["image/exr"]
ff = ["image/ff"]
gif = ["image/gif"]
hdr = ["image/hdr"]
ico = ["image/ico"]
jpeg = ["image/jpeg"]
png = ["image/png"]
pnm = ["image/pnm"]
qoi = ["image/qoi"]
tga = ["image/tga"]
tiff = ["image/tiff"]
webp = ["image/webp"]

[dependencies]
luminous-plugins = { path = "crates/plugins" }
luminous-image-loader = { path = "crates/image_loader" }
bytemuck = "1.25.0"
chrono = "0.4.44"
clap = { version = "4.5.57", default-features = false, features = [
  "std",
  "derive",
  "help",
  "usage",
  "error-context",
] }
cocotools = "0.0.7"
color-print = "0.3.7"
csscolorparser = "0.8.2"
directories = { workspace = true }
env_logger = "0.11.8"
image = { workspace = true }
kamadak-exif = "0.6.1"
log = { workspace = true }
num_cpus = "1.17.0"
palette = { version = "0.7.6" }
pollster = "0.4.0"
rayon = { workspace = true }
rfd = "0.17.2"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.9.11"
trash = "5.2.5"
walkdir = "2.5.0"
wgpu = "29.0.1"

[dev-dependencies]
criterion = { workspace = true }

[dependencies.slint]
workspace = true
features = ["std", "compat-1-2", "log", "renderer-skia-opengl"]

[target.'cfg(target_os = "linux")'.dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
slint = { version = "1.16.0", default-features = false, features = [
  "backend-winit",
] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
arboard = "3.6.1"
slint = { version = "1.16.0", default-features = false, features = [
  "backend-default",
] }

[build-dependencies]
slint-build = "1.16.0"

[profile.dev]
opt-level = 3
split-debuginfo = "unpacked"
codegen-units = 256

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
codegen-units = 1

[profile.quick-release]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
strip = false

[[bench]]
name = "pipeline_bench"
harness = false

[lib]
doctest = false
