[package]
name = "luminous-image-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
luminous-plugins = { path = "../plugins" }
dashmap = { workspace = true }
directories = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
slint = { workspace = true, features = ["compat-1-2"] }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
image = { workspace = true }

[[bench]]
name = "image_loader"
harness = false

[lib]
doctest = false
