[project]
name = "SAM_3"
version = "0.1.0"
description = "Segment Anything Model 3 (SAM 3) for Interactive Segmentation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "huggingface-hub>=1.8.0",
  "numpy>=2.4.2",
  "sam3>=0.0.1",
  "torch>=2.10.0",
  "torchvision>=0.25.0",
  "transformers>=5.3.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
